<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".view.fragment.CreateFragment">

    <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/account"
                android:textSize="34sp"
                android:textColor="#222222"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/tvLogOut"
                android:text="@string/logout"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@drawable/bg_button"
                android:paddingTop="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:paddingLeft="@dimen/padding_quart"
                android:paddingStart="@dimen/padding_quart"
                android:paddingRight="@dimen/padding_quart"
                android:paddingEnd="@dimen/padding_quart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/padding"
        android:background="@color/greyline"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"/>

    <TextView
        android:text="@string/name"
        android:textSize="14sp"
        android:textColor="@color/font3"
        android:layout_marginTop="@dimen/padding_double"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/name_example"
        android:textSize="18sp"
        android:textColor="@color/font2"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/padding_half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/email"
        android:textSize="14sp"
        android:textColor="@color/font3"
        android:layout_marginTop="@dimen/padding_double"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/email_axample"
        android:textSize="18sp"
        android:textColor="@color/font2"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/padding_half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/gender"
        android:textSize="14sp"
        android:textColor="@color/font3"
        android:layout_marginTop="@dimen/padding_double"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/gender_example"
        android:textSize="18sp"
        android:textColor="@color/font2"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/padding_half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
            android:visibility="gone"
            android:text="@string/logout"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@drawable/bg_button"
            android:layout_marginTop="@dimen/padding_quart"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:paddingLeft="@dimen/padding_quart"
            android:paddingStart="@dimen/padding_quart"
            android:paddingRight="@dimen/padding_quart"
            android:paddingEnd="@dimen/padding_quart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</LinearLayout>