<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".view.activity.EventDetailActivity">

    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/ivBack"
                android:src="@drawable/ic_action_back"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:padding="@dimen/padding_half"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_toRightOf="@+id/ivBack"
                android:text="@string/event_detail"
                android:textSize="24sp"
                android:textColor="@color/font2"
                android:textStyle="bold"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </RelativeLayout>

    <View android:background="@color/grey1"
          android:layout_marginTop="2dp"
          android:layout_width="match_parent"
          android:layout_height="0.2dp"/>



    <ScrollView
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/event_date"
                    android:textSize="14sp"
                    android:textColor="@color/font2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <TextView
                    android:id="@+id/tvEventDate"
                    android:hint="@string/event_date"
                    android:textSize="18sp"
                    android:textColor="@color/font1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_half"/>


            <TextView
                    android:text="@string/event_name"
                    android:textSize="14sp"
                    android:textColor="@color/font2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <TextView
                    android:id="@+id/tvEventName"
                    android:hint="@string/event_name"
                    android:textSize="18sp"
                    android:textColor="@color/font1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_half"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>